Closed Bug 87999 Opened 24 years ago Closed 24 years ago

selector *:not(X):pseudo-element does not consider the negation

Categories

(Core :: CSS Parsing and Computation, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: glazou, Assigned: glazou)

References

(Blocks 1 open bug)

Details

(Whiteboard: critical for 0.9.2)

Attachments

(1 file)

When a chain of simple selectors contains 1. a universal selector * 2. negations 3. a pseudo-element the negations are dropped by the CSS parser. This is because the CSS parser generates the following structures : pseudo-element -> universal selector | +--negations and does not check if negations is null or not trying to simplify that representation and get rid of the universal selector. Fixing this bug is needed for Composer.
Status: NEW → ASSIGNED
Whiteboard: fix in hand, r= and sr= needed
r/sr=hyatt
Whiteboard: fix in hand, r= and sr= needed
r=peterv.
Checked in (trunk) ; drivers approval for branch since it blocks AllTags mode rewriting in Composer.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
I meant "drivers' approval requested". Sorry for spam.
Checked into the 0.9.2 branch for you.
Whiteboard: critical for 0.9.2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: