CSS parser drops negations if attached to universal selector and a pseudo-element; b=87999, r=peterv, sr=hyatt